// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar should render Default 1`] = `
<DocumentFragment>
  <nav
    class="css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/"
            >
              Gesellschaft
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Politik
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Kultur
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Tsüri-News
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="https://google.com"
            >
              Was lauft?
            </a>
          </div>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithClassName 1`] = `
<DocumentFragment>
  <nav
    class="extra-classname css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/"
            >
              Gesellschaft
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Politik
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Kultur
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Tsüri-News
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="https://google.com"
            >
              Was lauft?
            </a>
          </div>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithEmotion 1`] = `
<DocumentFragment>
  <nav
    class="css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/"
            >
              Gesellschaft
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Politik
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Kultur
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="/a/abcd"
            >
              Tsüri-News
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
              href="https://google.com"
            >
              Was lauft?
            </a>
          </div>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithError 1`] = `
<DocumentFragment>
  <nav
    class="css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          />
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithLoading 1`] = `
<DocumentFragment>
  <nav
    class="css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          />
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithoutItems 1`] = `
<DocumentFragment>
  <nav
    class="css-1xe741k-NavbarWrapper ei6evl211"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-a5d5mw-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl210 css-15e8tal-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-kfwxas-NavbarMain ei6evl29"
        >
          <div
            class="css-9l1kex-IconButtonWrapper ei6evl27"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeLarge css-fro4kn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="css-pd0s4t-NavbarMainItems ei6evl28"
          />
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;
